[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/Desk.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Ring.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Ass.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/white.png" type="Texture" id=4]
[ext_resource path="res://sprites/DeskMask.png" type="Texture" id=5]
[ext_resource path="res://scripts/Game.gd" type="Script" id=6]
[ext_resource path="res://scenes/HandyHand.tscn" type="PackedScene" id=7]
[ext_resource path="res://fonts/IndustrialRevolution-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Desk:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeskMask:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RingLayer1:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RingLayer2:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RingLayer3:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "shake_desk"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Desk:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.1, 0.14, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1 ), Vector2( 1, 1 ), Vector2( 0.9, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DeskMask:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.06, 0.1, 0.14, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1 ), Vector2( 1, 1 ), Vector2( 0.9, 1 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("RingLayer1:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.06, 0.1, 0.14, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1 ), Vector2( 1, 1 ), Vector2( 0.9, 1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("RingLayer2:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.06, 0.1, 0.14, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1 ), Vector2( 1, 1 ), Vector2( 0.9, 1 ), Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("RingLayer3:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.06, 0.1, 0.14, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 1 ), Vector2( 1, 1 ), Vector2( 0.9, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 120
font_data = ExtResource( 8 )

[node name="Level" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}
asses = [ NodePath("RingLayer1/Ring/Ass"), NodePath("RingLayer1/Ring2/Ass"), NodePath("RingLayer1/Ring3/Ass"), NodePath("RingLayer2/Ring4/Ass"), NodePath("RingLayer2/Ring5/Ass"), NodePath("RingLayer2/Ring6/Ass"), NodePath("RingLayer3/Ring7/Ass"), NodePath("RingLayer3/Ring8/Ass"), NodePath("RingLayer3/Ring9/Ass") ]
pointsPerLevel = [ 3000, 6000, 9000, 12000 ]

[node name="RingLayer1" type="Node2D" parent="."]
z_index = 7
z_as_relative = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Ring" parent="RingLayer1" instance=ExtResource( 2 )]
position = Vector2( -356, -141 )
scale = Vector2( 0.95, 0.95 )

[node name="Ass" parent="RingLayer1/Ring" instance=ExtResource( 3 )]

[node name="Hurtbox" parent="RingLayer1/Ring/Ass" index="6"]
collision_mask = 1

[node name="Mask" type="Sprite" parent="RingLayer1/Ring"]
modulate = Color( 0.713726, 0.305882, 0.305882, 1 )
position = Vector2( 0.50001, 263.5 )
scale = Vector2( 1.59434, 7.18571 )
z_index = 2
texture = ExtResource( 4 )

[node name="Ring2" parent="RingLayer1" instance=ExtResource( 2 )]
position = Vector2( 0, -141 )
scale = Vector2( 0.95, 0.95 )

[node name="Ass" parent="RingLayer1/Ring2" instance=ExtResource( 3 )]

[node name="Hurtbox" parent="RingLayer1/Ring2/Ass" index="6"]
collision_mask = 1

[node name="Mask" type="Sprite" parent="RingLayer1/Ring2"]
modulate = Color( 0.713726, 0.305882, 0.305882, 1 )
position = Vector2( 0.50001, 263.5 )
scale = Vector2( 1.59434, 7.18571 )
z_index = 2
texture = ExtResource( 4 )

[node name="Ring3" parent="RingLayer1" instance=ExtResource( 2 )]
position = Vector2( 350, -141 )
scale = Vector2( 0.95, 0.95 )

[node name="Ass" parent="RingLayer1/Ring3" instance=ExtResource( 3 )]

[node name="Hurtbox" parent="RingLayer1/Ring3/Ass" index="6"]
collision_mask = 1

[node name="Mask" type="Sprite" parent="RingLayer1/Ring3"]
modulate = Color( 0.713726, 0.305882, 0.305882, 1 )
position = Vector2( 0.50001, 263.5 )
scale = Vector2( 1.59434, 7.18571 )
z_index = 2
texture = ExtResource( 4 )

[node name="RingLayer2" type="Node2D" parent="."]
z_index = 6
z_as_relative = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Ring4" parent="RingLayer2" instance=ExtResource( 2 )]
position = Vector2( -356, 70 )
scale = Vector2( 0.98, 0.98 )
z_index = 4

[node name="Ass" parent="RingLayer2/Ring4" instance=ExtResource( 3 )]

[node name="Hurtbox" parent="RingLayer2/Ring4/Ass" index="6"]
collision_layer = 16
collision_mask = 2

[node name="Mask" type="Sprite" parent="RingLayer2/Ring4"]
modulate = Color( 0.713726, 0.305882, 0.305882, 1 )
position = Vector2( 0.50001, 136.5 )
scale = Vector2( 1.59434, 3.55714 )
z_index = 2
texture = ExtResource( 4 )

[node name="Ring5" parent="RingLayer2" instance=ExtResource( 2 )]
position = Vector2( 0, 70 )
scale = Vector2( 0.98, 0.98 )
z_index = 4

[node name="Ass" parent="RingLayer2/Ring5" instance=ExtResource( 3 )]

[node name="Hurtbox" parent="RingLayer2/Ring5/Ass" index="6"]
collision_layer = 16
collision_mask = 2

[node name="Mask" type="Sprite" parent="RingLayer2/Ring5"]
modulate = Color( 0.713726, 0.305882, 0.305882, 1 )
position = Vector2( 0.50001, 136.5 )
scale = Vector2( 1.59434, 3.55714 )
z_index = 2
texture = ExtResource( 4 )

[node name="Ring6" parent="RingLayer2" instance=ExtResource( 2 )]
position = Vector2( 350, 70 )
scale = Vector2( 0.98, 0.98 )
z_index = 4

[node name="Ass" parent="RingLayer2/Ring6" instance=ExtResource( 3 )]

[node name="Hurtbox" parent="RingLayer2/Ring6/Ass" index="6"]
collision_layer = 16
collision_mask = 2

[node name="Mask" type="Sprite" parent="RingLayer2/Ring6"]
modulate = Color( 0.713726, 0.305882, 0.305882, 1 )
position = Vector2( 0.50001, 136.5 )
scale = Vector2( 1.59434, 3.55714 )
z_index = 2
texture = ExtResource( 4 )

[node name="RingLayer3" type="Node2D" parent="."]
z_index = 5
z_as_relative = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Ring7" parent="RingLayer3" instance=ExtResource( 2 )]
position = Vector2( -356, 281 )
z_index = 7

[node name="Ass" parent="RingLayer3/Ring7" instance=ExtResource( 3 )]

[node name="Hurtbox" parent="RingLayer3/Ring7/Ass" index="6"]
collision_layer = 32
collision_mask = 4

[node name="Mask" type="Sprite" parent="RingLayer3/Ring7"]
modulate = Color( 0.713726, 0.305882, 0.305882, 1 )
position = Vector2( 0.50001, 52.5 )
scale = Vector2( 1.59434, 1.15714 )
z_index = 2
texture = ExtResource( 4 )

[node name="Ring8" parent="RingLayer3" instance=ExtResource( 2 )]
position = Vector2( 0, 281 )
z_index = 7

[node name="Ass" parent="RingLayer3/Ring8" instance=ExtResource( 3 )]

[node name="Hurtbox" parent="RingLayer3/Ring8/Ass" index="6"]
collision_layer = 32
collision_mask = 4

[node name="Mask" type="Sprite" parent="RingLayer3/Ring8"]
modulate = Color( 0.713726, 0.305882, 0.305882, 1 )
position = Vector2( 0.50001, 52.5 )
scale = Vector2( 1.59434, 1.15714 )
z_index = 2
texture = ExtResource( 4 )

[node name="Ring9" parent="RingLayer3" instance=ExtResource( 2 )]
position = Vector2( 350, 281 )
z_index = 7

[node name="Ass" parent="RingLayer3/Ring9" instance=ExtResource( 3 )]

[node name="Hurtbox" parent="RingLayer3/Ring9/Ass" index="6"]
collision_layer = 32
collision_mask = 4

[node name="Mask" type="Sprite" parent="RingLayer3/Ring9"]
modulate = Color( 0.713726, 0.305882, 0.305882, 1 )
position = Vector2( 0.50001, 52.5 )
scale = Vector2( 1.59434, 1.15714 )
z_index = 2
texture = ExtResource( 4 )

[node name="Desk" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 120 )

[node name="DeskMask" type="Sprite" parent="."]
position = Vector2( 0, 469 )
z_index = 100
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="CameraBoi" type="Camera2D" parent="."]
current = true
__meta__ = {
"_edit_lock_": true
}

[node name="AssLiftTimer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="AssDownTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="HandyHand" parent="." instance=ExtResource( 7 )]
backPosition = NodePath("../BackPosition")
frontPosition = NodePath("../FrontPosition")

[node name="BackPosition" type="Position2D" parent="."]
position = Vector2( 0, -130 )

[node name="FrontPosition" type="Position2D" parent="."]
position = Vector2( 0, 80 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/shake_desk = SubResource( 2 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="GUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -342.0
margin_top = 21.0
margin_bottom = 201.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "
[wave amp=50 freq=5]EXAMPLE TEXT[/wave]"
text = "
EXAMPLE TEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelLabel" type="RichTextLabel" parent="GUI"]
margin_left = 42.0
margin_top = 21.0
margin_right = 384.0
margin_bottom = 201.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "
[wave amp=50 freq=5]EXAMPLE TEXT[/wave]"
text = "
EXAMPLE TEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerLabel" type="RichTextLabel" parent="GUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -30.0
margin_top = 75.0
margin_right = 512.0
margin_bottom = 348.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "
[wave amp=50 freq=5]EXAMPLE TEXT[/wave]"
text = "
EXAMPLE TEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="GUI"]

[node name="GameTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="AssLiftTimer" to="." method="_on_AssLiftTimer_timeout"]
[connection signal="timeout" from="AssDownTimer" to="." method="_on_AssDownTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]

[editable path="RingLayer1/Ring/Ass"]
[editable path="RingLayer1/Ring2/Ass"]
[editable path="RingLayer1/Ring3/Ass"]
[editable path="RingLayer2/Ring4/Ass"]
[editable path="RingLayer2/Ring5/Ass"]
[editable path="RingLayer2/Ring6/Ass"]
[editable path="RingLayer3/Ring7/Ass"]
[editable path="RingLayer3/Ring8/Ass"]
[editable path="RingLayer3/Ring9/Ass"]
